# videoclaw

./: .env.example  .gitignore  2026-02-11-ai.txt  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/plans/: seedance-prompt-guide.md
.codebuddy/plans/: Phase_5_Web_UI___Kimi_LLM_集成_6da970f0.md  添加_Kling_视频生成适配器_fd9a68cc.md  添加_MiniMax_视频生成适配器_4a64bcd2.md  添加智谱清影__CogVideoX__视频生成适配器_23982296.md
.github/workflows/: ci.yml
docs/deliverables/: 这个王妃太狂野_剧本.md
docs/deliverables/这个王妃太狂野/: 00_series_outline.json  README.md  ep02_当众打脸_script.json  ep03_深夜试探_script.json  ep04_至暗时刻_script.json  ep05_王妃驾到_script.json  final_series.json  (+1 more)
docs/plans/: 2026-03-05-cli-refactor-design.md  2026-03-13-character-reference-injection.md
docs/references/: storyboard-template.md
examples/: chinese-ai-drama.claw.yaml  drama-series.yaml  product-promo.yaml  short-drama.yaml  tutorial.yaml  western-tiktok-drama.claw.yaml
scripts/: generate_character_images.py  generate_character_voices.py  generate_wangfei_episodes.py  rebuild_final_series.py  run_ep01_session6.py
src/videoclaw/: __init__.py  cli.py  config.py
tests/: generate_assets.py  generate_tts_and_scenes.py  smoke_test_western_drama.py  test_audio_post.py  test_audit_log.py  test_compose_transitions.py  test_composition_audit.py  test_cost_tracker.py  test_director.py  test_drama.py  test_drama_e2e.py  test_drama_models.py  test_drama_planner.py  test_drama_runner.py  test_english_character_designer.py  test_english_quality.py  test_english_subtitles.py  test_english_voice.py  test_events.py  test_executor_handlers.py  test_experience_feedback.py  test_flow.py  test_frame_analyzer.py  test_integration.py  test_locale.py  test_music.py  test_prompt_enhancer.py  test_prompt_segments.py  test_reference_image_injection.py  test_registry.py  test_render.py  test_server.py  test_state.py  test_storage.py  test_subtitle_generator.py  test_tts_handler.py  test_tts_multi_role.py  test_vision_auditor_v2.py  test_voice_caster.py  test_western_drama_e2e.py  (+1 more)
web/: package-lock.json  package.json
(+114 files in other folders)
