[project]
name = "videoclaw"
version = "0.1.0"
description = "The Agent OS for AI Video Generation"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "VideoClaw Contributors" }]
keywords = ["ai", "video", "generation", "agent", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.2",
    "litellm>=1.55.0",
    "aiosqlite>=0.20.0",
    "zhipuai>=2.1.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]
local = [
    "torch>=2.5.0",
    "diffusers>=0.32.0",
]
all = ["videoclaw[server,local]"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "videoclaw[server]",
]

[project.scripts]
claw = "videoclaw.cli:app"

[project.entry-points."videoclaw.adapters"]
openai = "videoclaw.models.adapters.openai_video:OpenAIVideoAdapter"
mock = "videoclaw.models.adapters.mock:MockVideoAdapter"
kling = "videoclaw.models.adapters.kling:KlingVideoAdapter"
minimax = "videoclaw.models.adapters.minimax:MiniMaxVideoAdapter"
zhipu = "videoclaw.models.adapters.zhipu:ZhipuVideoAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/videoclaw"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
